[gd_scene load_steps=8 format=3 uid="uid://bx4l1kxn27ps0"]

[ext_resource type="Script" path="res://Scripts/Projectiles/bullet.gd" id="1_c7ap5"]
[ext_resource type="Shader" path="res://Assets/Shaders/rope.gdshader" id="1_mpjsy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bjjd4"]
shading_mode = 0

[sub_resource type="BoxMesh" id="BoxMesh_fr4kq"]
material = SubResource("StandardMaterial3D_bjjd4")
size = Vector3(1.28, 0.25, 0.25)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c4t6q"]
render_priority = 0
shader = ExtResource("1_mpjsy")
shader_parameter/color = Color(0.398954, 0.00107428, 0.575401, 1)
shader_parameter/size = 1.05

[sub_resource type="BoxMesh" id="BoxMesh_gh4k5"]
material = SubResource("ShaderMaterial_c4t6q")
size = Vector3(1.28, 0.35, 0.35)

[sub_resource type="BoxShape3D" id="BoxShape3D_n6dnm"]
size = Vector3(0.45, 0.45, 2.467)

[node name="Bullet" type="RigidBody3D"]
collision_layer = 2
collision_mask = 2
gravity_scale = 0.0
continuous_cd = true
script = ExtResource("1_c7ap5")

[node name="Main" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -0.674208)
mesh = SubResource("BoxMesh_fr4kq")

[node name="Outline" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -0.674208)
mesh = SubResource("BoxMesh_gh4k5")

[node name="EnemyArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.674208)

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00258789, 0.00256726, 0.0148696)
shape = SubResource("BoxShape3D_n6dnm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00258789, 0.00256726, -0.664478)
shape = SubResource("BoxShape3D_n6dnm")

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="GraceTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[connection signal="body_entered" from="EnemyArea" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
[connection signal="timeout" from="GraceTimer" to="." method="_on_grace_timer_timeout"]
